# sale_net

./: .env.example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
org/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
org/migrations/: 0001_initial.py
sale_net/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py
users/migrations/: 0001_initial.py
